Bug 1762839 - Fix Win specific thread annotations in nsProcessCommon. r=jesup,rkraesig

This adds in some locks that appear to be missing for the Windows case. It also
adds some locks which I think are missing for the non-Win case where `mProcess`
still exists in nsProcessCommon (though I'm less confident of that case).

Differential Revision: https://phabricator.services.mozilla.com/D142789